# tg-index

./: .replit  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
app/: __init__.py  __main__.py  config.py  generate_session_string.py  main.py  telegram.py
app/templates/: footer.html  header.html  home.html  index.html  info.html  login.html
app/templates/js/: playlist.js
