[tool.poetry]
name = "repl_nix_tg-index"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp-jinja2 = "^1.5"
aiohttp-session = "^2.12.0"
Jinja2 = "^3.1.2"
Pillow = "^9.3.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
Telethon = "^1.25.4"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
